# taller-I-final

./: README.md
Resueltos/Ejercicios C/: ejercicio_1  ejercicio_1.c  ejercicio_2  ejercicio_3  ejercicio_4  ejercicio_5  ejercicio_5.c  ejercicio_6  ejercicio_6.c  ejercicio_7
Resueltos/Ejercicios C++/: ejercicio_1  ejercicio_1.cpp  ejercicio_10  ejercicio_10.cpp  ejercicio_11  ejercicio_12  ejercicio_12.cpp  ejercicio_13  ejercicio_13.cpp  ejercicio_14  ejercicio_14.cpp  ejercicio_2  ejercicio_3  ejercicio_4  ejercicio_5  ejercicio_5.cpp  ejercicio_6  ejercicio_7  ejercicio_7.cpp  ejercicio_8  ejercicio_9
Resueltos/Ejercicios Interfaz Grafica/: cmake_install.cmake  ejercicio_1  ejercicio_10  ejercicio_11  ejercicio_2  ejercicio_2.cpp  ejercicio_3  ejercicio_4  ejercicio_5  ejercicio_5.cpp  ejercicio_6  ejercicio_7  ejercicio_7.cpp  ejercicio_8  ejercicio_9
Resueltos/Ejercicios Macros/: ejercicio_1  ejercicio_1.c  ejercicio_2
Resueltos/Ejercicios archivos/: ej_12.txt  ejercicio_10  ejercicio_11  ejercicio_12  ejercicio_12.c  ejercicio_13  ejercicio_13.c  ejercicio_2  ejercicio_2.c  ejercicio_3  ejercicio_3.c  ejercicio_4  ejercicio_5  ejercicio_5.c  ejercicio_6  ejercicio_7  ejercicio_7.c  ejercicio_8  ejercicio_8.c  ejercicio_9  numeros.txt  numeros2.txt  prueba  prueba_1.txt  prueba_13.txt  prueba_2.txt  prueba_3.txt  prueba_5.txt  prueba_9.txt
resueltos/interfaz-grafica/: CMakeCache.txt  CMakeLists.txt  Makefile  ejercicio_1.cpp  ejercicio_10.cpp  ejercicio_11.cpp  ejercicio_3.cpp  ejercicio_4.cpp  ejercicio_6.cpp  ejercicio_8.cpp  ejercicio_9.cpp
(+48 files in other folders)
